# CGT-Project

./: .gitignore  README.md  pyproject.toml
cgtproject/: main.py  plots.py  qlearning.py
cgtproject/UDRL/: NEW_env.py  RPS_env.py  main.py  main_udrl.py  udrl.py  udrl_agent.py  utils.py
cgtproject/UDRL/envs/: NEW_env.py  RPS_env.py  matchingpennies.py  shapleys.py  stagHuntsgame.py
cgtproject/qlearning/: main.py  plots.py  qlearning.py
