[tool.poetry]
name = "cgt-project"
version = "0.1.0"
description = "Computational game theory Project"
authors = ["Niclas Müller-Hof <n.j.muller-hof@student.rug.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
numpy = "^2.2.3"
gymnasium = "^1.1.1"
gym = "^0.26.2"
pandas = "^2.2.3"
torch = "^2.6.0"
stable-baselines3 = "^2.5.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
